--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.16",
     "element-ui": "^2.12.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
