--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-ui": "^2.12.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
