--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "dayjs": "^1.8.16",
     "element-ui": "^2.12.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
