--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
