--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "yarn run build && node mc-deploy.js && yarn run build && node mc-deploy.js "
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dayjs": "^1.8.16",
     "element-ui": "^2.12.0",
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "ftps": "^1.1.1",
     "prerender-spa-plugin": "^3.4.0",
     "vue-template-compiler": "^2.6.10"
   },
